# gucli

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  styles.css  styles.scss
.github/workflows/: release.yml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: files.rs  lib.rs  main.rs
