[package]
name = "gucli-ui"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr","nightly"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
chrono = "0.4"

[workspace]
members = ["src-tauri"]

[profile.release]
opt-level = "z"  # Максимальная оптимизация по размеру
lto = true      # Агрессивная оптимизация на этапе линковки
panic = "abort"  # Убираем обработку паник (уменьшает размер)
