[package]
name = "gucli-ui"
version = "1.0.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.10", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
chrono = "0.4"
js-sys = "0.3"
reqwest = { version = "0.12", features = ["json"] }
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "MediaQueryList",
    "Storage",
    "console"
]}

[workspace]
members = ["src-tauri"]

[profile.release]
opt-level = "z"  # Maximum optimization by size
lto = true      # Aggressive optimization at the linking stage
panic = "abort"  # Remove panic processing (reduces size)
