[package]
name = "gucli"
version = "0.1.0"
description = "linux tray app for run cli commands"
authors = ["Yuriy (Jager) Lysov"]
edition = "2024"
license = "GPL-3.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "gucli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.2"
log = "0.4"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
nix = "0.30"
gtk4 = { version = "0.10" } 
webkit2gtk = { version = "2.0.1", features = ["v2_20"] }
ansi-to-html = "0.2.2"
